overlays-manifests/authorization-policies/authorizationpolicy_currencyservice.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: currencyservice
spec:
  selector:
    matchLabels:
      app: currencyservice
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/default/sa/frontend
        - cluster.local/ns/default/sa/checkoutservice
    to:
    - operation:
        paths:
        - /hipstershop.CurrencyService/Convert
        - /hipstershop.CurrencyService/GetSupportedCurrencies
        methods:
        - POST
        ports:
        - "7000"
