overlays-manifests/authorization-policies/authorizationpolicy_emailservice.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: emailservice
spec:
  selector:
    matchLabels:
      app: emailservice
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/default/sa/checkoutservice
    to:
    - operation:
        paths:
        - /hipstershop.EmailService/SendOrderConfirmation
        methods:
        - POST
        ports:
        - "8080"
